--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "daisyui": "^3.1.6"
   }
 }
