--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tinymce/tinymce-react": "^4.3.0",
     "autoprefixer": "10.4.14",
+    "browser-image-compression": "^2.0.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "firebase": "^9.23.0",
