--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@tinymce/tinymce-react": "^4.3.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.1",
