--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-secure-storage": "^1.2.2",
+    "stripe": "^13.4.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
