--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@tinymce/tinymce-react": "^4.3.0",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.1",
     "browser-image-compression": "^2.0.2",
